--- a/gold-admin-frontend/src/app/views/partials/components/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/upload-packets/upload-packets.component.html
@@ -56,7 +56,8 @@
                             <td class="text-color " *ngIf="!scrapIds">
                                 <label class="m-0">{{packet.controls.ornamentsName.value | titlecase}}</label>
                             </td>
-                            <td class="text-gray text-center" *ngIf="!(url == 'view-loan' || url == 'view-scrap')">
+                            <td class="text-gray" *ngIf="!(url == 'view-loan' || url == 'view-scrap')"
+                                [ngClass]="scrapIds ? 'text-right' : 'text-center'">
                                 <img class="kt-pointer" src="../../../../../../../assets/media/icons/cancel.png" alt=""
                                     height="15" (click)="removeSelectedPacketsData(idx)">
                             </td>
