--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -295,7 +295,7 @@
                                 </div>
                             </div>
 
-                            <div class="row kt-padding-t-25">
+                            <div *ngIf="action !== 'view'" class="row kt-padding-t-25">
                                 <div class="offset-10 col-2">
                                     <kt-button [type]="'button'" [value]="'Next'" (click)="approval()"></kt-button>
                                 </div>
