--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
@@ -103,7 +103,7 @@
                 </ng-container>
                 <ng-container matColumnDef="ornamentReleaseAmount">
                     <mat-header-cell *matHeaderCellDef>
-                        <div class="text-right">Ornament Release Amount</div>
+                        <div class="">Ornament Release Amount</div>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let item">{{item.releaseAmount }}</mat-cell>
                 </ng-container>
