--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/full-release-final/full-release-final.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/full-release-final/full-release-final.component.scss
@@ -39,45 +39,45 @@
     .mat-column-loanAmount{
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
-        padding-right: 25px;
+        align-items: flex-start;
+        // padding-right: 25px;
         justify-content: flex-end;
     }
     .mat-column-principalAmount{
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
-        padding-right: 25px;
+        align-items: flex-start;
+        // padding-right: 25px;
         justify-content: flex-end;
         flex: 0 0 5%;
     }
     .mat-column-totalPayableAmount{
-        padding-right: 25px;
-        justify-content: flex-end;
+        // padding-right: 25px;
+        justify-content: flex-start;
         flex: 0 0 5%;
     }
     .mat-column-penalInterest{
-        padding-right: 25px;
-        justify-content: flex-end;
+        // padding-right: 25px;
+        justify-content: flex-start;
         flex: 0 0 4%;
     }
     .mat-column-interestAmount{
-        padding-right: 25px;
-        justify-content: flex-end;
+        // padding-right: 25px;
+        justify-content: flex-start;
         flex: 0 0 5%;
     }
     .mat-column-ornamentReleaseAmount{
-        padding-right: 25px;
-        justify-content: flex-end;
+        // padding-right: 25px;
+        justify-content: flex-start;
         flex: 0 0 4.5%;
     }
     .mat-column-previousLTV{
-        padding-right: 25px;
-        justify-content: flex-end;
+        // padding-right: 25px;
+        justify-content: flex-start;
     }
     .mat-column-currentLTV{
-        padding-right: 25px;
-        justify-content: flex-end;
+        // padding-right: 25px;
+        justify-content: flex-start;
     }
     .mat-column-currentLocation{
         flex: 0 0 5%;
