--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.scss
@@ -17,7 +17,7 @@
     }
     .mat-column-amount{
         flex: 0 0 8% !important;
-        justify-content: flex-end;
+        // justify-content: flex-end;
         padding-right: 20px;
     }
     .mat-column-interestRate{
