--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.scss
@@ -18,13 +18,13 @@
         padding-left:12% ;
     }
 
-    .table-amount {
-      text-align: right;
-      padding-right: 7%;
-    }
-    .table-last {
-      padding-right: 3%;
-    }
+    // .table-amount {
+    //   text-align: right;
+    //   padding-right: 7%;
+    // }
+    // .table-last {
+    //   padding-right: 3%;
+    // }
     // .altered-row 
     // // thead th:not(:first-child):not(:last-child), .altered-row tbody tr td:not(:first-child):not(:last-child) 
     // // thead th:first-child, .altered-row tbody tr td 
