--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.scss
@@ -15,9 +15,9 @@
     .padding-left {
         padding-left: 4%;
     }
-    .padding-right {
-        padding-right: 4%;
-    }
+    // .padding-right {
+    //     padding-right: 4%;
+    // }
     .table-padding-start {
         padding-left: 4%;
     }
@@ -25,10 +25,10 @@
         padding-left: 6%;        
     }
 
-    .table-amount {
-        text-align: right;
-        padding-right: 6%;
-    }
+    // .table-amount {
+    //     text-align: right;
+    //     padding-right: 6%;
+    // }
     .th-padding-left {
 		padding-left: 3%;
     	width: 10%;
