--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay-history/quick-pay-history.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay-history/quick-pay-history.component.scss
@@ -1,6 +1,6 @@
 .transparent {
     width: 25%;
 }
-.table-amount {
-    padding-right: 10%;
-}
+// .table-amount {
+//     padding-right: 10%;
+// }
