--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.scss
@@ -21,9 +21,9 @@
 	.th-padding-style{
 		padding-left:3% ;
 	}
-	.table-amount {
-		text-align: right;
-	}
+	// .table-amount {
+	// 	text-align: right;
+	// }
 
 	.altered-row thead th:not(:first-child):not(:last-child), .altered-row tbody tr td:not(:first-child):not(:last-child) {
 		padding: 1rem 1.5rem;
