--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -789,6 +789,6 @@ mat-header-row {
 .mat-tooltip {
 	font-size: 12px !important;
 }
-.table-amount {
-	text-align: right;
-}
+// .table-amount {
+// 	text-align: right;
+// }
