--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.scss
@@ -13,7 +13,7 @@
     }
     .mat-column-depositAmount{
         padding-right: 25px;
-        justify-content: flex-end;
+        // justify-content: flex-end;
     }
     .mat-column-update{
         flex: 0 0 9%;
