--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
@@ -19,10 +19,10 @@
 
                 <ng-container matColumnDef="loanAmount">
                     <mat-header-cell *matHeaderCellDef>
-                        <div class="text-right">Loan Amount</div>
+                        <div class="">Loan Amount</div>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let item">
-                        <div class="ml-auto" *ngFor="let loan of item.masterLoan.customerLoan">
+                        <div class="" *ngFor="let loan of item.masterLoan.customerLoan">
                             {{loan.loanAmount}}
                         </div>
                         <!-- {{item.masterLoan.finalLoanAmount}} -->
@@ -75,7 +75,7 @@
                 </ng-container>
                 <ng-container matColumnDef="principalAmount">
                     <mat-header-cell *matHeaderCellDef>
-                        <div class="text-right"> Principal Outstanding</div>
+                        <div class=""> Principal Outstanding</div>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let item">
                         <div *ngFor="let loan of item.masterLoan.customerLoan">
@@ -105,7 +105,7 @@
                 </ng-container>
                 <ng-container matColumnDef="ornamentReleaseAmount">
                     <mat-header-cell *matHeaderCellDef>
-                        <div class="text-right">
+                        <div class="">
                             Ornament Release Amount
                         </div>
                     </mat-header-cell>
