--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -48,10 +48,10 @@
                 <ng-container matColumnDef="amount">
                     <mat-header-cell *matHeaderCellDef>Loan Amount</mat-header-cell>
                     <mat-cell *matCellDef="let loan" class="d-block">
-                        <div class="currency text-right">
+                        <div class="currency">
                             {{loan?.customerLoan[0]?.loanAmount | indianCurrencyFormat}}
                         </div>
-                        <div class="currency text-right">
+                        <div class="currency">
                             {{loan?.customerLoan[1]?.loanAmount | indianCurrencyFormat}}
                         </div>
                     </mat-cell>
