--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
@@ -5,7 +5,7 @@
                 <table class="table outer-border altered-row">
                     <thead>
                         <th class="transparent th-padding-left">Loan ID</th>
-                        <th class="transparent table-amount th-padding-right" style="width: 12%;">Loan Amount</th>
+                        <th class="transparent table-amount">Loan Amount</th>
                         <th class="transparent">Loan Date</th>
                         <th class="transparent">Scheme Name</th>
                         <th class="transparent">Tenure</th>
@@ -21,7 +21,7 @@
                                     {{loanDetails?.customerLoan[1]?.loanUniqueId}}
                                 </span>
                             </td>
-                            <td class="table-amount th-padding-right">
+                            <td class="table-amount">
                                 <span>{{loanDetails?.customerLoan[0]?.loanAmount}}</span>
                                 <br>
                                 <span *ngIf="loanDetails?.customerLoan[1]">
