--- a/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
@@ -50,7 +50,7 @@
 
                     <div>
                         <div
-                            *ngIf="controls.paymentType.value && (controls.paymentType.value != 'gateway' && controls.paymentType.value != 'cash')">
+                            *ngIf="controls.paymentType.value && (controls.paymentType.value != 'upi' && controls.paymentType.value != 'wallet' && controls.paymentType.value != 'netbanking' && controls.paymentType.value != 'card'&& controls.paymentType.value != 'cash')">
                             <div class="row kt-margin-b-15">
                                 <div class="col-4 form-label mandatory">
                                     <mat-label class="kt-padding-l-10">Deposit Bank Name</mat-label>
@@ -118,7 +118,7 @@
                             </div>
                         </div>
 
-                        <div *ngIf="controls.paymentType.value != 'gateway'" class="row kt-margin-b-15">
+                        <div *ngIf="controls.paymentType.value != 'upi' && controls.paymentType.value != 'card' && controls.paymentType.value != 'wallet' && controls.paymentType.value != 'netbanking'" class="row kt-margin-b-15">
                             <div class="col-4 form-label mandatory">
                                 <mat-label class="kt-padding-l-10">Deposit Date</mat-label>
                             </div>
@@ -201,7 +201,7 @@
 
 
                     <div class="p-3">
-                        <kt-modal-footer (action)="action($event)" [value]="'Update'">
+                        <kt-modal-footer (action)="action($event)" [value]="'Done'">
                         </kt-modal-footer>
 
                     </div>
