--- a/gold-loan-backend/templates/pawnTicket-secure-template.html
+++ b/gold-loan-backend/templates/pawnTicket-secure-template.html
@@ -128,8 +128,8 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td> 9892545454</td>
-                        <td>support@augmont.com</td>
+                        <td>022-61420000</td>
+                        <td>help@augmont.com</td>
                     </tr>
                 </table>
             </div>
@@ -249,9 +249,9 @@
 
                     </tr>
                     <tr>
-                        <td class="align-top text-center">09765422510</td>
-                        <td class="align-top text-center">AUGMONT GOLDTECH PRIVATE LIMITED</td>
-                        <td class="align-top text-center">IFSC0000111</td>
+                        <td class="align-top text-center">920020032503725</td>
+                        <td class="align-top text-center">Augmont Goldtech Private Limited</td>
+                        <td class="align-top text-center">UTIB0001705</td>
                     </tr>
                 </table>
             </div>
