--- a/gold-loan-backend/templates/pawnTicket-secure-unsecure-template.html
+++ b/gold-loan-backend/templates/pawnTicket-secure-unsecure-template.html
@@ -252,9 +252,9 @@
 
                     </tr>
                     <tr>
-                        <td class="align-top text-center">09765422510</td>
-                        <td class="align-top text-center">AUGMONT GOLDTECH PRIVATE LIMITED</td>
-                        <td class="align-top text-center">IFSC0000111</td>
+                        <td class="align-top text-center">920020032503725</td>
+                        <td class="align-top text-center">Augmont Goldtech Private Limited</td>
+                        <td class="align-top text-center">UTIB0001705</td>
                     </tr>
                 </table>
             </div>
