--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -192,13 +192,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="filtered-data" *ngIf="filteredList?.loanStatus">
-                        <div class="filtered-title">By B.M Status</div>
+                    <div class="filtered-data" *ngIf="filteredList?.bmStatus">
+                        <div class="filtered-title">By B.M. Status</div>
                         <div class="d-flex">
-                            <div class="filtered-value" *ngFor="let item of filteredList?.loanStatus; let i = index;">
+                            <div class="filtered-value" *ngFor="let item of filteredList?.bmStatus; let i = index;">
                                 <span>{{item?.name | titlecase}}</span>
                                 <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
-                                    (click)="clearFilter('loanStatus',i)">
+                                    (click)="clearFilter('bmStatus',i)">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="filtered-data" *ngIf="filteredList?.otStatus">
+                        <div class="filtered-title">By OPS Team Status</div>
+                        <div class="d-flex">
+                            <div class="filtered-value" *ngFor="let item of filteredList?.otStatus; let i = index;">
+                                <span>{{item?.name | titlecase}}</span>
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('otStatus',i)">
                             </div>
                         </div>
                     </div>
@@ -250,7 +260,7 @@
                     <div class="filtered-data" *ngIf="filteredList?.endDate">
                         <div class="filtered-title">By End Date</div>
                         <div class="d-flex">
-                            <div class="filtered-value" >
+                            <div class="filtered-value">
                                 <span>{{filteredList?.endDate | date:'mediumDate'}}</span>
                                 <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
                                     (click)="clearFilter('date')">
