--- a/gold-loan-backend/templates/scrap-purchase-voucher.html
+++ b/gold-loan-backend/templates/scrap-purchase-voucher.html
@@ -89,10 +89,11 @@
                         <div class="col-6">
                             <div ><b>Voucher Number: </b><span> {{this.voucherNumber}}</span></div>
                             <div ><b>Voucher Date: </b><span> {{this.date}}</span></div>
+                            <div ><b>GST No: </b><span> {{this.gstinNumber}}</span></div>
+                            <div ><b>Cin No: </b><span> {{this.cinNumber}}</span></div>
                         </div>
                     </div>
                 </div>
-                {{/each}}
             </div>
             <div class="row py-0 my-0 pr-3">
                 <div class="col-10 m-auto pt-0 px-0">
@@ -100,26 +101,21 @@
                         style="width: 100%;margin:0; padding:0; font-weight: 400;table-layout: fixed;border: 1px solid black;">
                         <tr>
                             <th style="width: 10%">Sr.No</th>
-                            <th style="width: 40%; word-wrap: break-word">Description</th>
-                            <th style="width: 10%">Units</th>
-                            <th style="width: 10%">Net weight &nbsp&nbsp&nbsp(in grams)</th>
-                            <th style="width: 10%">Rate Per Unit</th>
+                            <th style="width: 50%; word-wrap: break-word">Description</th>
+                            <!-- <th style="width: 10%">Units</th> -->
+                            <th style="width: 10%">Net weight &nbsp&nbsp(in grams)</th>
+                            <th style="width: 10%">Rate Per Gram</th>
                             <th style="width: 10%">Amount</th>
                         </tr>
-                        {{#each ornamentData}}
                         <tr>
-                            <td class="text-center ">{{this.srNo}}</td>
-                            <td class="text-left px-1" style="word-wrap: break-word">{{this.ornamentName}}</td>
-                            <td class="text-right px-1">{{this.quantity}}</td>
-                            <td class="text-right px-1">{{this.grossWeight}}</td>
-                            <td class="text-right px-1"></td>
-                            <td class="text-right px-1">{{this.amount}}</td>
+                            <td class="text-center ">1</td>
+                            <td class="text-left px-1" style="word-wrap: break-word">Scrap Jewelry</td>
+                            <!-- <td class="text-right px-1">{{this.quantity}}</td> -->
+                            <td class="text-right px-1">{{this.netWeight}}</td>
+                            <td class="text-right px-1">{{this.ratePerGram}}</td>
+                            <td class="text-right px-1">{{this.totalAmount}}</td>
                         </tr>
-                        {{else}}
-                        <br>
-                        {{/each}}
                         <tr>
-                            <td>&nbsp</td>
                             <td>&nbsp</td>
                             <td>&nbsp</td>
                             <td>&nbsp</td>
@@ -132,7 +128,6 @@
                             <td>&nbsp</td>
                             <td>&nbsp</td>
                             <td>&nbsp</td>
-                            <td>&nbsp</td>
                         </tr>
                         <tr>
                             <td>&nbsp</td>
@@ -140,34 +135,31 @@
                             <td>&nbsp</td>
                             <td>&nbsp</td>
                             <td>&nbsp</td>
-                            <td>&nbsp</td>
                         </tr>
-                        {{#each purchaseVoucher}}
-                        <tr>
+                        <!-- <tr>
                             <td>&nbsp</td>
                             <td class="text-left px-1">NET TOTAL</td>
                             <td class="text-right px-1">{{this.totalUnits}}</td>
                             <td class="text-right px-1">{{this.totalGrams}}</td>
                             <td class="text-right px-1">&nbsp</td>
                             <td class="text-right px-1">{{this.totalAmount}}</td>
-                        </tr>
+                        </tr> -->
                         <tr>
                             <td>&nbsp</td>
                             <td class="text-left px-1">GROSS INVOICE AMOUNT</td>
-                            <td class="text-right px-1">&nbsp</td>
                             <td class="text-right px-1">&nbsp</td>
                             <td class="text-right px-1">&nbsp</td>
                             <td class="text-right px-1">{{this.totalAmount}}</td>
                         </tr>
                         <tr>
                             <td>&nbsp</td>
-                            <td colspan="5" class="text-left px-1">{{this.amountInWords}}</td>
+                            <td colspan="4" class="text-left px-1">{{this.amountInWords}}</td>
                         </tr>
                         {{/each}}
                         <tr>
                             <td>&nbsp</td>
                             <td class="text-left px-1">&nbsp</td>
-                            <td colspan="4" class="text-right px-1">E.& O.E.</td>
+                            <td colspan="3" class="text-right px-1">E.& O.E.</td>
 
                         </tr>
                     </table>
