--- a/gold-loan-backend/templates/pawnTicket-secure-template.html
+++ b/gold-loan-backend/templates/pawnTicket-secure-template.html
@@ -225,9 +225,9 @@
                         <!-- <td></td> -->
                         <td class="float-left" style=" word-break: break-all;">{{this.ornamentType}}</td>
                         <td>{{this.quantity}}</td>
-                        <td>{{this.grossWeight}}</td>
-                        <td>{{this.deduction}}</td>
-                        <td>{{this.netWeight}}</td>
+                        <td>{{this.grossWeight}} gm</td>
+                        <td>{{this.deduction}} gm</td>
+                        <td>{{this.netWeight}} gm</td>
                     </tr>
                     {{/each}}
                 </table>
