--- a/gold-loan-backend/templates/pawnTicket-secure-unsecure-template.html
+++ b/gold-loan-backend/templates/pawnTicket-secure-unsecure-template.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href={{secureHtml}}>
 
     <style>
-        html {
+        /* html {
             zoom: 0.75;
-        }
+        } */
 
         body {
             font-size: 13px !important;
@@ -228,9 +228,9 @@
                         <!-- <td></td> -->
                         <td class="float-left" style=" word-break: break-all;">{{this.ornamentType}}</td>
                         <td>{{this.quantity}}</td>
-                        <td>{{this.grossWeight}}</td>
-                        <td>{{this.deduction}}</td>
-                        <td>{{this.netWeight}}</td>
+                        <td>{{this.grossWeight}} gm</td>
+                        <td>{{this.deduction}} gm</td>
+                        <td>{{this.netWeight}} gm</td>
                     </tr>
                     {{/each}}
                 </table>
