--- a/gold-loan-backend/templates/scrap-purchase-voucher.html
+++ b/gold-loan-backend/templates/scrap-purchase-voucher.html
@@ -40,7 +40,7 @@
                 <div class="col-10 text-center m-auto" >
 
                     <p class="pt-2">
-                        <h5 ><b>Augmont Goldtech Private Limited</b></h5>
+                        <h4 ><b>Augmont Goldtech Private Limited</b></h4>
                     <div >
                         <div >(Formerly Augmont Precious Metals Private Limited)</div>
                         <div>(CIN :- U51909MH2020PTC337639) (GSTIN:- 27AATCA3030A1Z3)</div>
@@ -50,8 +50,8 @@
                     <div class="row">
                         <div class="col-6 text-left">
                             <div class="row">
-                                <div class="col-3 text-left"><b>LANDLINE NO: </b></div>
-                                <div class="col-9 text-left">
+                                <div class="col-4 text-left"><b>LANDLINE NO: </b></div>
+                                <div class="col-8 text-left p-0">
                                     <div>022-61420000</div>
                                 </div>
                             </div>
@@ -63,7 +63,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-3 text-left"><b>Email :</b></div>
-                                <div class="col-9 text-left">help@augmont.in</div>
+                                <div class="col-9 text-left">help@augmont.com</div>
                             </div>
                         </div>
                     </div>
@@ -100,42 +100,22 @@
                     <table class="align-top text-center tableBorder px-0 py-0 mx-0 my-0"
                         style="width: 100%;margin:0; padding:0; font-weight: 400;table-layout: fixed;border: 1px solid black;">
                         <tr>
-                            <th style="width: 10%">Sr.No</th>
-                            <th style="width: 50%; word-wrap: break-word">Description</th>
+                            <th style="width: 8%">Sr.No</th>
+                            <th style="width: 42%; word-wrap: break-word">Description</th>
                             <!-- <th style="width: 10%">Units</th> -->
-                            <th style="width: 10%">Net weight &nbsp&nbsp(in grams)</th>
-                            <th style="width: 10%">Rate Per Gram</th>
-                            <th style="width: 10%">Amount</th>
+                            <th style="width: 15%"><div>Net weight</div> <div>(in grams)</div></th>
+                            <th style="width: 15%">Rate Per Gram</th>
+                            <th style="width: 15%">Amount</th>
                         </tr>
-                        <tr>
-                            <td class="text-center ">1</td>
-                            <td class="text-left px-1" style="word-wrap: break-word">Scrap Jewelry</td>
+                        <tr >
+                            <td class="text-center pb-5">1</td>
+                            <td class="text-left px-1 pb-5" style="word-wrap: break-word">Scrap Jewellery</td>
                             <!-- <td class="text-right px-1">{{this.quantity}}</td> -->
-                            <td class="text-right px-1">{{this.netWeight}}</td>
-                            <td class="text-right px-1">{{this.ratePerGram}}</td>
-                            <td class="text-right px-1">{{this.totalAmount}}</td>
+                            <td class="text-right px-1 pb-5">{{this.netWeight}}</td>
+                            <td class="text-right px-1 pb-5">{{this.ratePerGram}}</td>
+                            <td class="text-right px-1 pb-5">{{this.totalAmount}}</td>
                         </tr>
-                        <tr>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                        </tr>
-                        <tr>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                        </tr>
-                        <tr>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                            <td>&nbsp</td>
-                        </tr>
+                        
                         <!-- <tr>
                             <td>&nbsp</td>
                             <td class="text-left px-1">NET TOTAL</td>
