--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -261,7 +261,7 @@
 					</div>
 
 					<div *ngIf="controls.userType.value === 'Corporate'">
-						<div class="row kt-padding-t-15">
+						<div class="row">
 							<div class="col-4 align-self-center form-label">
 								<label class="mandatory">Organization Type</label>
 							</div>
